fixed mobile overflow 📝

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,15 +18,13 @@ tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
 section, summary, time, mark, audio, video {
-	width: 100%;
-	height: 100%;
 	margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;}
-	overflow-x: hidden; 
+	overflow-x: hidden;
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
